--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adex-react-pdf-viewer",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "A simple React PDF viewer component using react-pdf.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -27,8 +27,8 @@
       "require": "./dist/index.js"
     },
     "./index.css": "./dist/index.css",
-    "./locales/*.json": "./locales/*.json",
-    "./themes/*.css": "./src/themes/*.css"
+    "./locales/*.json": "./dist/locales/*.json",
+    "./themes/*.css": "./dist/themes/*.css"
   },
   "devDependencies": {
     "@types/react": "^18.3.19",
